--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>HTML</title>
-  
-  <!-- HTML -->
-  
+    <title>HTML</title>
 
-  <!-- Custom Styles -->
-  <link rel="stylesheet" href="style-codePlayGround.css">
-</head>
+    <!-- HTML -->
 
-<body>
-  
-  <script src="main-codePlayGround.js"></script>
-</body>
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+
+  <body>
+    <p class="nama">Dani Maulana</p>
+
+    
+    <script src="main.js"></script>
+  </body>
 </html>
